# vertex-ai-custom-training-boilerplate

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  build_and_push.sh  config.yaml  deploy.sh  predict.sh  pyproject.toml  run.sh  setup.py
predictor/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  custom_handler.py  pyproject.toml
predictor/src/: config.properties
predictor/src/predictor/: main.py  prediction.py  schemas.py  utils.py
predictor/tests/: test_main.py  test_prediction.py  test_utils.py
trainer/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  experiment.py  metadata.py  model.py  pyproject.toml  task.py  utils.py
trainer/src/: config.py  data.py  experiment.py  task.py
trainer/src/trainer/: config.py  data.py  experiment.py  log_experiment.py  main.py  vertex.py
trainer/tests/: test_config.py  test_data.py  test_experiment.py  test_vertex.py
