[project]
name = "predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogluon>=1.3.0",
    "google-cloud-storage>=3.1.0",
    "litestar>=2.16.0",
    "pandas>=2.2.3",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
 "mypy>=1.13.0",
 "pytest>=8.3.5",
 "ruff>=0.8.2",
]

[tool.ruff]
line-length = 80

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped", "attr-defined"]

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
