[project]
name = "trainer"
version = "1.1.0"
description = "Vertex AI | Custom Training | AutoGluon"
requires-python = ">=3.12"
dependencies = [
    "autogluon-tabular[all]==1.3.1",
    "click>=8.1.8",
    "gcsfs>=2025.3.2",
    "google-cloud-bigquery>=3.31.0",
    "google-cloud-storage>=2.19.0",
    "msgspec>=0.19.0",
    "pandas>=2.2.3",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "google-cloud-aiplatform[autologging]>=1.98.0",
    "autogluon-multimodal==1.3.1",
    "bokeh>=3.7.3",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = ["bandit>=1.8.0", "mypy>=1.13.0", "ruff>=0.8.2"]

[tool.ruff]
line-length = 80

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped", "attr-defined"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux/amd64'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux/amd64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
